# transforms3d_cpp

./: CMakeLists.txt  README.md  TransForms.cpp  TransFormsGroup.cpp  main.cpp
example/handeye_caul/: CMakeLists.txt  example_handeye.cpp
include/: TransForms.h
include/TransForms3d/: TransForms.h
include/transforms3d/: pcdtool.h  transforms3d.h
src/: pcdtool.cpp  trans_forms.cpp  trans_forms_group.cpp
test/: test.py
test/pubtf/.catkin_tools/profiles/default/: devel_collisions.txt
test/pubtf/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
test/pubtf/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
test/pubtf/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
test/pubtf/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
test/pubtf/devel/.private/handeyetf/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
test/pubtf/devel/.private/handeyetf/lib/handeyetf/: handeyetf
test/pubtf/devel/.private/handeyetf/lib/pkgconfig/: handeyetf.pc
test/pubtf/devel/.private/handeyetf/share/handeyetf/cmake/: handeyetfConfig.cmake
test/pubtf/devel/lib/handeyetf/: handeyetf
test/pubtf/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  handeyetf.pc
test/pubtf/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
test/pubtf/devel/share/handeyetf/cmake/: handeyetfConfig-version.cmake  handeyetfConfig.cmake
test/pubtf/logs/handeyetf/: build.make.001.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.012.log.stderr
test/pubtf/src/handeyetf/src/: main.cpp
tests/: eigen_euler_test.cpp  main_test.cpp  nanoflann_test.cpp  pcdtool_test.cpp  transforms_euler_test.cpp  transforms_group_pcl_test.cpp  transforms_group_test.cpp
tests/other_test/: test.ipynb  test.py
tests/other_test/handeyetf/: CMakeLists.txt  package.xml
